# octopulse

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
docs/: tracking-control-mockup.html  user-service-setup.md
migrations/: 0001_initial_schema.sql  0002_pull_request_additional_fields.sql  0003_app_state.sql  0004_normalized_event_notification_timing.sql  0005_normalized_event_bundle_id.sql  0006_notification_record_links.sql  0007_event_bundle_event_range.sql  0008_pull_request_author_avatar_url.sql  0009_pull_request_review_state.sql  0010_pull_request_ci_job_state.sql  0011_pull_request_merge_readiness.sql
src/: activity-feed.ts  app-icon.ts  app.ts  app.tsx  authored-pull-request-discovery.ts  avatar-cache.ts  avatar_cache.rs  bot-activity-classification.ts  client-page-data.ts  client-route-state.ts  client-spa.tsx  config.ts  database.ts  desktop-entry.ts  desktop_notifier.rs  displayable-notification-events.ts  event-bundling.ts  freedesktop-notifications.d.ts  github.ts  github_client.rs  github_notification_poller.rs  install-user-service.ts  linux-notification-adapter.ts  logger.ts  main.rs  main.ts  manual-pull-request-tracking.ts  models.rs  normalized-event-repository.ts  notification-body-text.ts  notification-dispatch.ts  notification-history.ts  notification-preparation.ts  notification-record-repository.ts  notification-rendering.ts  notification_debug.rs  notification_processor.rs  open-url.ts  pull-request-activity-ingestion.ts  pull-request-activity-normalization.ts  (+15 more)
(+36 files in other folders)
