[package]
name = "octopulse"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
notify-rust = "4.11.7"
octocrab = "0.44.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt", "macros", "time", "full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
